SFDCProject/src/objects/Promotions__c.object
<CustomObject>
    <description>This is where we store particular information on promotional offers to customers implemented through the proposal tool</description>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Promo External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Name__c</fullName>
        <label>Promo Name</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Employee Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promo_Paid_Date__c</fullName>
        <label>Promo Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Type__c</fullName>
        <label>Promo Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront Reduction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promo_Value__c</fullName>
        <inlineHelpText>Value of the offer to be applied to the customer account balance</inlineHelpText>
        <label>Promo Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Promotion (Employee)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Promotions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>